codama-macros/tests/codama_attribute/values_nodes/sysvar/invalid_input.fail.stderr
error: expected a string
 --> tests/codama_attribute/values_nodes/sysvar/invalid_input.fail.rs:3:33
  |
3 | #[codama(default_value = sysvar(42))]
  |                                 ^^

error: expected a string
 --> tests/codama_attribute/values_nodes/sysvar/invalid_input.fail.rs:6:33
  |
6 | #[codama(default_value = sysvar(banana))]
  |                                 ^^^^^^
